# mm-zksync

./: justfile  pyproject.toml
tests/: test_abi.py
